syntax = "proto3";
package messages;

message HorcrustMsgMessage {
  oneof message_type {
    HorcrustMsgRequest request = 1;
    HorcrustMsgResponse response = 2;
  }
}
message HorcrustMsgRequest {
  oneof request {
    PutShareRequest put_share = 1;
    GetShareRequest get_share = 2;
    RefreshShareRequest refresh = 3;
  }
}
message HorcrustMsgResponse {
  oneof response {
    HorcrustMsgError error = 1;
    ShareResponse share_response = 2;
  }
}

message HorcrustMsgError {
  bool error = 1;
  string error_string = 2;
}
message PutShareRequest {
  uint32 key = 1;
  uint64 share = 2;
}
message GetShareRequest {
  uint32 key = 1;
}
message RefreshShareRequest {
  repeated uint32 key = 1;
  uint64 random = 2;
}

message ShareResponse {
  uint64 share = 1;
}

message RawMessage {
  bytes nonce = 1;
  bytes encrypted_payload = 2;
}